# base_utilities_esp

./: CMakeLists.txt  README.md  idf_component.yml
include/: BaseUtilities.hpp  DelayExec.hpp  FileHandle.hpp  FtpClient.h  IPAddress.hpp  KVDB.hpp  KVHandle.hpp  Thread.hpp  Timer.hpp  UUID.hpp  WebsocketClient.hpp  WiFi.hpp
src/: BaseUtilities.cpp  FtpClient.c  IPAddress.cpp  Timer.cpp  UUID.cpp  WiFi.cpp
